--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://player.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://gun.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://survivor\'s game.tscn", "res://mob.tscn", "res://player.tscn")
-current_scene="res://survivor's game.tscn"
+open_scenes=PackedStringArray("res://survivor\'s game.tscn", "res://mob.tscn", "res://player.tscn", "res://gun.tscn")
+current_scene="res://mob.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://mob.gd", "res://player.gd"]
-selected_script="res://mob.gd"
+open_scripts=["res://gun.gd", "res://mob.gd", "res://player.gd"]
+selected_script="res://gun.gd"
 open_help=["Node"]
 script_split_offset=70
 list_split_offset=0
