--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://gun.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray()
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://survivor\'s game.tscn", "res://mob.tscn", "res://player.tscn", "res://gun.tscn")
-current_scene="res://mob.tscn"
+open_scenes=PackedStringArray("res://survivor\'s game.tscn", "res://mob.tscn", "res://player.tscn", "res://gun.tscn", "res://bullet.tscn")
+current_scene="res://bullet.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://gun.gd", "res://mob.gd", "res://player.gd"]
-selected_script="res://gun.gd"
-open_help=["Node"]
+open_scripts=["res://bullet.gd", "res://gun.gd", "res://mob.gd", "res://player.gd"]
+selected_script="res://bullet.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
